<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button1"
        android:layout_width="110dp"
        android:layout_height="69dp"
        android:layout_x="98dp"
        android:layout_y="184dp"
        android:onClick="click_play"
        android:text="@string/play" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="62dp"
        android:layout_y="62dp"
        android:text="@string/compilation"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_x="88dp"
        android:layout_y="392dp"
        android:onClick="click_credits"
        android:text="@string/credits" />

</AbsoluteLayout>
